# decode_mars_log_file

./: CMakeLists.txt  README.md  decode_log_file.c
.github/workflows/: build.yml
